got incidents to display on screen using react

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
       Simple way to pass the data - store it as 
       a property on window object.
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script>
       window.servicenowUserToken = "$[token]";
     </script>
   </head>
-  <body>
+  <body class='bg-blue'>
     <div id="root"></div>
   </body>
 </html>
